# rusthtmxwidget

./: .gitignore  Cargo.toml  README.md  build.sh
frontend/rsource/: alt.rs  webserver.rs
frontend/static/css/: styles.css
frontend/static/js/: script.js
frontend/templates/: index.html.tera
