[package]
name = "htmxrustpricewidget"
version = "0.1.0"
edition = '2021'

[dependencies]
csv = "1.1"
num-traits = "0.2"
clap = "2.33"
prettytable-rs = "0.8"
mysql = "20.1"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.15"
tokio-tungstenite = "0.15"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
hmac = "0.10"
sha2 = "0.9"
chrono = "0.4"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
hex = "0.4.3"
dotenv = "0.15.0"
actix-web = "4.4.0"
actix-rt = "2"
tera = "1.19.1" # Check for the latest version
actix-files = "0.6"

[[bin]]
name = "al_go2"
path = "frontend/rsource/alt.rs"

[[bin]]
name = "webserver"
path = "frontend/rsource/webserver.rs"
